fw/plugins: linux: psaux: Use chardet to decode characters efficiently
Fixes all errors related to encoding.

Signed-off-by: Panchajanya1999 <kernel@panchajanya.dev>
(cherry picked from commit 6612136a44c66a21fdb6883d68112557bb77bfc4)
Signed-off-by: Panchajanya1999 <kernel@panchajanya.dev>

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,3 +7,6 @@ jsonschema>=2.3.0
 # Used to build executable file
 pyinstaller>=6.5.0
 pyinstaller-hooks-contrib>=2024.3
+
+# This is required by psaux
+chardet
