fw/plugins: linux: psaux: Use chardet to decode characters efficiently
Fixes all errors related to encoding.

Signed-off-by: Panchajanya1999 <kernel@panchajanya.dev>

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -20,3 +20,6 @@ jsonschema>=2.3.0
 
 # This is required for memory acquisition via leechcore/pcileech.
 leechcorepyc>=2.4.0
+
+# This is required by psaux
+chardet
